Adjust SASS generation and asset paths for Hugo CMS

--- a/templates/src/_components/aspect/_aspect.scss
+++ b/templates/src/_components/aspect/_aspect.scss
@@ -96,9 +96,9 @@
 
 .aspect-bg-2by1 {
   // Background image is actually: 25 : 13
-  background-image: url(aspect-bg-2by1.png);
+  background-image: url(assets/aspect-bg-2by1.png);
 }
 
 .aspect-bg-4by3 {
-  background-image: url(aspect-bg-4by3.png);
+  background-image: url(assets/aspect-bg-4by3.png);
 }
