--- a/templates/src/_components/decor/_decor.scss
+++ b/templates/src/_components/decor/_decor.scss
@@ -23,6 +23,6 @@
 
 .decor-rc-candy {
   &.decor-bottom::after {
-    background-image: url(decor-rc-candy.png);
+    background-image: url(assets/decor-rc-candy.png);
   }
 }
