--- a/templates/src/_components/footer/_footer.scss
+++ b/templates/src/_components/footer/_footer.scss
@@ -139,7 +139,7 @@
   }
 
   &:before {
-    background-image: url(footer-cityscape.png);
+    background-image: url(assets/footer-cityscape.png);
     background-repeat: repeat-x;
     background-position: 50% 2px;
     content: "";
