--- a/templates/src/css/sass/_fonts.scss
+++ b/templates/src/css/sass/_fonts.scss
@@ -11,8 +11,8 @@
   font-weight: 700;
   src: local('Barlow Semi Condensed Bold'),
        local('BarlowSemiCondensed-Bold'),
-       url('barlowsemicondensed-bold.woff2') format('woff2'),
-       url('barlowsemicondensed-bold.woff') format('woff');
+       url('assets/barlowsemicondensed-bold.woff2') format('woff2'),
+       url('assets/barlowsemicondensed-bold.woff') format('woff');
 }
 
 @font-face {
@@ -21,8 +21,8 @@
   font-weight: 300;
   src: local('Barlow Semi Condensed Light'),
        local('BarlowSemiCondensed-Light'),
-       url('barlowsemicondensed-light.woff2') format('woff2'),
-       url('barlowsemicondensed-light.woff') format('woff');
+       url('assets/barlowsemicondensed-light.woff2') format('woff2'),
+       url('assets/barlowsemicondensed-light.woff') format('woff');
 }
 
 @font-face {
@@ -31,8 +31,8 @@
   font-weight: 400;
   src: local('Barlow Semi Condensed Regular'),
        local('BarlowSemiCondensed-Regular'),
-       url('barlowsemicondensed-regular.woff2') format('woff2'),
-       url('barlowsemicondensed-regular.woff') format('woff');
+       url('assets/barlowsemicondensed-regular.woff2') format('woff2'),
+       url('assets/barlowsemicondensed-regular.woff') format('woff');
 }
 
 @font-face {
@@ -40,8 +40,8 @@
   font-style: normal;
   font-weight: 700;
   src: local('LunchBox-Bold'),
-       url('373e2d-bold.woff2') format('woff2'),
-       url('373e2d-bold.woff') format('woff');
+       url('assets/373e2d-bold.woff2') format('woff2'),
+       url('assets/373e2d-bold.woff') format('woff');
 }
 
 @font-face {
@@ -49,8 +49,8 @@
   font-style: normal;
   font-weight: 300;
   src: local('LunchBox-Light'),
-       url('373e2d-light.woff2') format('woff2'),
-       url('373e2d-light.woff') format('woff');
+       url('assets/373e2d-light.woff2') format('woff2'),
+       url('assets/373e2d-light.woff') format('woff');
 }
 
 @font-face {
@@ -58,6 +58,6 @@
   font-style: normal;
   font-weight: 400;
   src: local('LunchBox'),
-       url('373e2d-regular.woff2') format('woff2'),
-       url('373e2d-regular.woff') format('woff');
+       url('assets/373e2d-regular.woff2') format('woff2'),
+       url('assets/373e2d-regular.woff') format('woff');
 }
