Move body-lg to parent div

--- a/templates/src/pages/page-stories.hbs
+++ b/templates/src/pages/page-stories.hbs
@@ -13,8 +13,8 @@ header_nav_casestudies: true
 
 <div class="section">
   <div class="container">
-    <div class="content">
-      <p class="body-lg"><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque laborum voluptatibus, eius in a quas aspernatur harum autem, amet, nostrum libero facilis. Neque impedit quidem fugit adipisci, eius perspiciatis. Maiores?</strong></p>
+    <div class="content body-lg">
+      <p><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque laborum voluptatibus, eius in a quas aspernatur harum autem, amet, nostrum libero facilis. Neque impedit quidem fugit adipisci, eius perspiciatis. Maiores?</strong></p>
     </div>
   </div>
 </div>
