--- a/hugo/layouts/partials/header.html
+++ b/hugo/layouts/partials/header.html
@@ -6,12 +6,12 @@
         <div class="header-brand-inner bg-rc-candy">
           <img alt="Real Change" class="header-brand-logo" height="63" src="/assets/real-change-logo-x2.png" width="55">
         </div>
-        <div class="header-brand-subtitle">Wigan &amp; Leigh</div>
+        <div class="header-brand-subtitle">Wigan & Leigh</div>
       </a>
     </div>
     {{ if .hero }}
     <div class="header-hero">
-      <h1 class="header-hero-title">HERO</h1>
+      <h1 class="header-hero-title">{{ .hero | markdownify | safeHTML }}</h1>
     </div>
     {{ end }}
   </div>
