--- a/hugo/layouts/partials/head.html
+++ b/hugo/layouts/partials/head.html
@@ -15,4 +15,5 @@
 <link rel="preload" href="/assets/373e2d-regular.woff2" as="font" type="font/woff2">
 <link rel="preload" href="/assets/373e2d-regular.woff" as="font" type="font/woff">
 {{ $styleMain := resources.Get "realchange.css" | resources.Minify | resources.Fingerprint }}<link rel="stylesheet" href="{{ $styleMain.Permalink }}">
+<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
