Add whatis image

--- a/hugo/layouts/index.html
+++ b/hugo/layouts/index.html
@@ -11,7 +11,7 @@
         {{ if .Params.whatis.button.url }}<a class="button button-primary d-block" href="{{ .Params.whatis.button.url }}">{{ .Params.whatis.button.text }}</a>{{ end }}
       </div>
       <div class="boxed-media aspect aspect-6by5">
-        <img alt="" class="aspect-item" src="assets/home-intro-whatis.png">
+        <img alt="" class="aspect-item" src="{{ .Params.whatis.image }}">
       </div>
     </div>
     <div class="home-intro-split">
