--- a/templates/src/pages/page-howitworks.hbs
+++ b/templates/src/pages/page-howitworks.hbs
@@ -73,8 +73,8 @@ header_nav_howitworks: true
         </div>
         <div class="card bg-white">
           <div class="card-header bg-rc-candy text-white edges edges-nobottom edges-rc-blue">
-            <h3 class="card-title">Under £100</h3>
-            <p><strong>(e.g. Education or training courses, furniture or househould items, clothes for interviews)</strong></p>
+            <h3 class="card-title">Over £100</h3>
+            <p><strong>(e.g. Deposit or rent, furnishings for a flat, white goods over £100)</strong></p>
           </div>
           <div class="card-body edges edges-notop edges-rc-blue">
             <p>If the request is for over £100, the application must be agreed by the Real Change panel.</p>
