Remove header.classes

--- a/hugo/layouts/stories/single.html
+++ b/hugo/layouts/stories/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-{{ partial "header.html" (dict "classes" "decor decor-bottom decor-rc-candy") }}
+{{ partial "header.html" }}
 
 <article class="section casestudy">
   <div class="container">
