Minor text updates

--- a/hugo/layouts/partials/footer.html
+++ b/hugo/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer{{ if .classes }} {{ .classes }}{{ end }}">
+<footer class="footer footer-withcityscape{{ if .classes }} {{ .classes }}{{ end }}">
   <div class="footer-inner">
     <div class="footer-split">
       <div class="footer-body">
