Adjust paths for Templates to match live

--- a/templates/src/pages/page-home.hbs
+++ b/templates/src/pages/page-home.hbs
@@ -5,7 +5,7 @@ header_nav_home: true
 ---
 {{> header
   header__classes="home-header decor decor-bottom decor-rc-candy"
-  header__style="background-image: url(assets/home-header.jpg);"
+  header__style="background-image: url(assets/uploads/home-header.jpg);"
   header__nav=true
   header__hero=true
   header__hero__text='Help make a <span class="text-rc-candy">Real Change</span> in <strong>Wigan &amp; Leigh</strong>'
@@ -21,7 +21,7 @@ header_nav_home: true
         <a class="button button-primary d-block" href="#">Donate and make a real change</a>
       </div>
       <div class="boxed-media aspect aspect-6by5">
-        <img alt="" class="aspect-item" src="assets/home-intro-whatis.png">
+        <img alt="" class="aspect-item" src="assets/uploads/home-intro-whatis.png">
       </div>
     </div>
     <div class="home-intro-split">
@@ -51,14 +51,14 @@ header_nav_home: true
       <div class="card-story card-stroy-witharrow">
         <h3 class="card-story-title">“Real change helped me make a real difference”</h3>
         <div class="card-story-image aspect aspect-5by2 bg-rc-dream">
-          <img alt="" src="assets/casestudy-jack-5by2.jpg">
+          <img alt="" src="assets/uploads/story-jack-5by2.jpg">
         </div>
         <a class="card-story-cta" href="page-casestudy.html">Read Jack’s story</a>
       </div>
       <div class="card-story card-stroy-witharrow">
         <h3 class="card-story-title">“Real change helped me when I needed it most”</h3>
         <div class="card-story-image aspect aspect-5by2 bg-rc-dream">
-          <img alt="" src="assets/casestudy-danny-5by2.jpg">
+          <img alt="" src="assets/uploads/story-danny-5by2.jpg">
         </div>
         <a class="card-story-cta" href="page-casestudy.html">Read Danny’s story</a>
       </div>
@@ -76,7 +76,7 @@ header_nav_home: true
     </div>
     <div class="home-partners-media aspect-bg aspect-bg-2by1">
       <div class="aspect aspect-2by1">
-        <img alt="" src="assets/home-partners-media.jpg">
+        <img alt="" src="assets/uploads/home-partners-media.jpg">
       </div>
     </div>
     <div class="home-partners-body">
