--- a/templates/src/pages/page-howitworks.hbs
+++ b/templates/src/pages/page-howitworks.hbs
@@ -5,7 +5,7 @@ header_nav_howitworks: true
 ---
 {{> header
   header__classes="decor decor-bottom decor-rc-candy"
-  header__style="background-image: url(assets/casestudy-jack-header.jpg);"
+  header__style="background-image: url(assets/uploads/header-worldcap.jpg);"
   header__nav=true
   header__hero=true
   header__hero__text='<span class="text-rc-candy">Real Change</span> in Wigan &amp; Leigh <strong>How it Works</strong>'
@@ -28,7 +28,7 @@ header_nav_howitworks: true
       <div class="stats">
         <div class="stat">
           <div class="stat-pie">
-            <img alt="85%" src="assets/stat-pie-85.png">
+            <img alt="85%" src="assets/uploads/stat-pie-85.png">
           </div>
           <div class="stat-body">
             <p><strong class="stat-count">85% </strong> Goes to the individual</p>
@@ -36,7 +36,7 @@ header_nav_howitworks: true
         </div>
         <div class="stat">
           <div class="stat-pie">
-            <img alt="10%" src="assets/stat-pie-10.png">
+            <img alt="10%" src="assets/uploads/stat-pie-10.png">
           </div>
           <div class="stat-body">
             <p><strong class="stat-count">10% </strong>  Goes to the running of Real Change</p>
@@ -44,7 +44,7 @@ header_nav_howitworks: true
         </div>
         <div class="stat">
           <div class="stat-pie">
-            <img alt="5%" src="assets/stat-pie-5.png">
+            <img alt="5%" src="assets/uploads/stat-pie-5.png">
           </div>
           <div class="stat-body">
             <p><strong class="stat-count">5% </strong> Goes to Just Giving</p>
