Pass header params

--- a/hugo/layouts/stories/single.html
+++ b/hugo/layouts/stories/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-{{ partial "header.html" }}
+{{ partial "header.html" .Params.header }}
 
 <article class="section casestudy">
   <div class="container">
