--- a/hugo/layouts/partials/header.html
+++ b/hugo/layouts/partials/header.html
@@ -15,6 +15,7 @@
         <li><a href="/">Home</a></li>
         <li><a href="/how-it-works/">How</a></li>
         <li><a href="/how-to-apply/">Apply</a></li>
+        <li><a href="/stories/">Stories</a></li>
       </ul>
     </nav>
     {{ if .hero }}
