--- a/templates/src/pages/page-stories.hbs
+++ b/templates/src/pages/page-stories.hbs
@@ -39,6 +39,13 @@ header_nav_casestudies: true
         </div>
         <a class="card-story-cta" href="page-casestudy.html">Read Danny’s story</a>
       </div>
+      <div class="card-story card-stroy-witharrow">
+        <h3 class="card-story-title">“Real change helped me make a real difference”</h3>
+        <div class="card-story-image aspect aspect-5by2 bg-rc-dream">
+          <img alt="" src="assets/uploads/story-jack-5by2.jpg">
+        </div>
+        <a class="card-story-cta" href="page-casestudy.html">Read Jack’s story</a>
+      </div>
     </div>
     <div class="home-stories-footer text-center">
       <a class="button button-primary mb-md" href="#">Donate and make a real change</a>
