--- a/templates/src/css/sass/_variables.scss
+++ b/templates/src/css/sass/_variables.scss
@@ -93,8 +93,8 @@ $font-size-base: 1.125rem; // 18px
 $font-size-xs: ($font-size-base * 0.6666666667); // 12px
 $font-size-sm: ($font-size-base * 0.7777777778); // 14px
 $font-size-md: ($font-size-base * 0.8888888889); // 16px
-// $font-size-lg: ($font-size-base * 1.25); // 20px
-// $font-size-xl: ($font-size-base * 1.5); // 24px
+$font-size-lg: ($font-size-base * 1.2222222222); // 22px
+$font-size-xl: ($font-size-base * 1.5555555556); // 28px
 
 $font-weight-base: 400;
 $font-weight-light: 300;
