--- a/hugo/layouts/partials/header.html
+++ b/hugo/layouts/partials/header.html
@@ -3,7 +3,7 @@
   <div class="header-inner">
     <div class="header-brand">
       <a href="/">
-        <div class="header-brand-inner bg-rc-candy">
+        <div class="header-brand-inner bg-rc-dive">
           <img alt="Real Change" class="header-brand-logo" height="63" src="/assets/real-change-logo-x2.png" width="55">
         </div>
         <div class="header-brand-subtitle">Wigan & Leigh</div>
