--- a/templates/src/pages/page-home.hbs
+++ b/templates/src/pages/page-home.hbs
@@ -8,7 +8,7 @@ header_nav_home: true
   header__style="background-image: url(assets/uploads/home-header.jpg);"
   header__nav=true
   header__hero=true
-  header__hero__text='Help make a <span class="text-rc-candy">Real Change</span> in <strong>Wigan &amp; Leigh</strong>'
+  header__hero__text='<span>Help make</span> a Real Change in <strong>Wigan &amp; Leigh</strong>'
 }}
 
 <section class="section home-intro">
