--- a/templates/src/pages/page-stories.hbs
+++ b/templates/src/pages/page-stories.hbs
@@ -8,7 +8,7 @@ header_nav_casestudies: true
   header__style="background-image: url(assets/uploads/header-worldcap.jpg);"
   header__nav=true
   header__hero=true
-  header__hero__text='<span class="text-rc-candy">Real Change</span> in Wigan &amp; Leigh <strong>Stories</strong>'
+  header__hero__text='Real Change in Wigan &amp; Leigh <strong>Stories</strong>'
 }}
 
 <div class="section">
