--- a/templates/src/pages/styleguide-header.hbs
+++ b/templates/src/pages/styleguide-header.hbs
@@ -30,7 +30,7 @@ layout: styleguide
   header__style=false
   header__nav=false
   header__hero=true
-  header__hero__text='<span class="text-rc-candy">Text Candy</span> Text White <strong>Strong Text</strong>'
+  header__hero__text='Text White <strong>Strong Text</strong>'
 }}
     </div>
     <div class="styleguide-code">
@@ -39,14 +39,14 @@ layout: styleguide
   &#x3C;div class=&#x22;header-inner&#x22;&#x3E;
     &#x3C;div class=&#x22;header-brand&#x22;&#x3E;
       &#x3C;a href=&#x22;#&#x22;&#x3E;
-        &#x3C;div class=&#x22;header-brand-inner bg-rc-candy&#x22;&#x3E;
+        &#x3C;div class=&#x22;header-brand-inner bg-rc-dive&#x22;&#x3E;
           &#x3C;img alt=&#x22;Real Change&#x22; class=&#x22;header-brand-logo&#x22; height=&#x22;63&#x22; src=&#x22;assets/real-change-logo-x2.png&#x22; width=&#x22;55&#x22;&#x3E;
         &#x3C;/div&#x3E;
         &#x3C;div class=&#x22;header-brand-subtitle&#x22;&#x3E;Wigan &#x26;amp; Leigh&#x3C;/div&#x3E;
       &#x3C;/a&#x3E;
     &#x3C;/div&#x3E;
     &#x3C;div class=&#x22;header-hero&#x22;&#x3E;
-      &#x3C;h1 class=&#x22;header-hero-title&#x22;&#x3E;&#x3C;span class=&#x22;text-rc-candy&#x22;&#x3E;Text Candy&#x3C;/span&#x3E; Text White &#x3C;strong&#x3E;Strong Text&#x3C;/strong&#x3E;&#x3C;/h1&#x3E;
+      &#x3C;h1 class=&#x22;header-hero-title&#x22;&#x3E;Text White &#x3C;strong&#x3E;Strong Text&#x3C;/strong&#x3E;&#x3C;/h1&#x3E;
     &#x3C;/div&#x3E;
   &#x3C;/div&#x3E;
 &#x3C;/header&#x3E;</code></pre>
@@ -59,7 +59,7 @@ layout: styleguide
   header__style=false
   header__nav=true
   header__hero=true
-  header__hero__text='<span class="text-rc-candy">Text Candy</span> Text White <strong>Strong Text</strong>'
+  header__hero__text='Text White <strong>Strong Text</strong>'
 }}
     </div>
     <div class="styleguide-code">
@@ -84,7 +84,7 @@ layout: styleguide
       &#x3C;/ul&#x3E;
     &#x3C;/nav&#x3E;
     &#x3C;div class=&#x22;header-hero&#x22;&#x3E;
-      &#x3C;h1 class=&#x22;header-hero-title&#x22;&#x3E;&#x3C;span class=&#x22;text-rc-candy&#x22;&#x3E;Text Candy&#x3C;/span&#x3E; Text White &#x3C;strong&#x3E;Strong Text&#x3C;/strong&#x3E;&#x3C;/h1&#x3E;
+      &#x3C;h1 class=&#x22;header-hero-title&#x22;&#x3E;Text White &#x3C;strong&#x3E;Strong Text&#x3C;/strong&#x3E;&#x3C;/h1&#x3E;
     &#x3C;/div&#x3E;
   &#x3C;/div&#x3E;
 &#x3C;/header&#x3E;</code></pre>
@@ -97,7 +97,7 @@ layout: styleguide
   header__style="background-image: url(assets/uploads/header-worldcap.jpg);"
   header__nav=true
   header__hero=true
-  header__hero__text='<span class="text-rc-candy">Text Candy</span> Text White <strong>Strong Text</strong>'
+  header__hero__text='Text White <strong>Strong Text</strong>'
 }}
     </div>
     <div class="styleguide-code">
@@ -106,7 +106,7 @@ layout: styleguide
   &#x3C;div class=&#x22;header-inner&#x22;&#x3E;
     &#x3C;div class=&#x22;header-brand&#x22;&#x3E;
       &#x3C;a href=&#x22;#&#x22;&#x3E;
-        &#x3C;div class=&#x22;header-brand-inner bg-rc-candy&#x22;&#x3E;
+        &#x3C;div class=&#x22;header-brand-inner bg-rc-dive&#x22;&#x3E;
           &#x3C;img alt=&#x22;Real Change&#x22; class=&#x22;header-brand-logo&#x22; height=&#x22;63&#x22; src=&#x22;assets/real-change-logo-x2.png&#x22; width=&#x22;55&#x22;&#x3E;
         &#x3C;/div&#x3E;
         &#x3C;div class=&#x22;header-brand-subtitle&#x22;&#x3E;Wigan &#x26;amp; Leigh&#x3C;/div&#x3E;
@@ -122,7 +122,7 @@ layout: styleguide
       &#x3C;/ul&#x3E;
     &#x3C;/nav&#x3E;
     &#x3C;div class=&#x22;header-hero&#x22;&#x3E;
-      &#x3C;h1 class=&#x22;header-hero-title&#x22;&#x3E;&#x3C;span class=&#x22;text-rc-candy&#x22;&#x3E;Text Candy&#x3C;/span&#x3E; Text White &#x3C;strong&#x3E;Strong Text&#x3C;/strong&#x3E;&#x3C;/h1&#x3E;
+      &#x3C;h1 class=&#x22;header-hero-title&#x22;&#x3E;Text White &#x3C;strong&#x3E;Strong Text&#x3C;/strong&#x3E;&#x3C;/h1&#x3E;
     &#x3C;/div&#x3E;
   &#x3C;/div&#x3E;
 &#x3C;/header&#x3E;</code></pre>
@@ -135,7 +135,7 @@ layout: styleguide
   header__style="background-image: url(assets/home-header.jpg);"
   header__nav=true
   header__hero=true
-  header__hero__text='<span class="text-rc-candy">Text Candy</span> Text White <strong>Strong Text</strong>'
+  header__hero__text='Text White <strong>Strong Text</strong>'
 }}
     </div>
     <div class="styleguide-code">
@@ -144,7 +144,7 @@ layout: styleguide
   &#x3C;div class=&#x22;header-inner&#x22;&#x3E;
     &#x3C;div class=&#x22;header-brand&#x22;&#x3E;
       &#x3C;a href=&#x22;#&#x22;&#x3E;
-        &#x3C;div class=&#x22;header-brand-inner bg-rc-candy&#x22;&#x3E;
+        &#x3C;div class=&#x22;header-brand-inner bg-rc-dive&#x22;&#x3E;
           &#x3C;img alt=&#x22;Real Change&#x22; class=&#x22;header-brand-logo&#x22; height=&#x22;63&#x22; src=&#x22;assets/real-change-logo-x2.png&#x22; width=&#x22;55&#x22;&#x3E;
         &#x3C;/div&#x3E;
         &#x3C;div class=&#x22;header-brand-subtitle&#x22;&#x3E;Wigan &#x26;amp; Leigh&#x3C;/div&#x3E;
@@ -160,7 +160,7 @@ layout: styleguide
       &#x3C;/ul&#x3E;
     &#x3C;/nav&#x3E;
     &#x3C;div class=&#x22;header-hero&#x22;&#x3E;
-      &#x3C;h1 class=&#x22;header-hero-title&#x22;&#x3E;&#x3C;span class=&#x22;text-rc-candy&#x22;&#x3E;Text Candy&#x3C;/span&#x3E; Text White &#x3C;strong&#x3E;Strong Text&#x3C;/strong&#x3E;&#x3C;/h1&#x3E;
+      &#x3C;h1 class=&#x22;header-hero-title&#x22;&#x3E;Text White &#x3C;strong&#x3E;Strong Text&#x3C;/strong&#x3E;&#x3C;/h1&#x3E;
     &#x3C;/div&#x3E;
   &#x3C;/div&#x3E;
 &#x3C;/header&#x3E;</code></pre>
