--- a/templates/src/pages/page-casestudy.hbs
+++ b/templates/src/pages/page-casestudy.hbs
@@ -7,7 +7,7 @@ layout: default
   header__style="background-image: url(assets/uploads/header-worldcap.jpg);"
   header__nav=true
   header__hero=true
-  header__hero__text='<span class="text-rc-candy">Real Change</span> in Wigan &amp; Leigh <strong> Jack’s Story</strong>'
+  header__hero__text='Real Change in Wigan &amp; Leigh <strong> Jack’s Story</strong>'
 }}
 
 <article class="section casestudy">
