Remove BG image from headr

--- a/templates/src/pages/page-home.hbs
+++ b/templates/src/pages/page-home.hbs
@@ -5,7 +5,7 @@ header_nav_home: true
 ---
 {{> header
   header__classes="home-header decor decor-bottom decor-rc-candy"
-  header__style="background-image: url(assets/uploads/home-header.jpg);"
+  header__style=false
   header__nav=true
   header__hero=true
   header__hero__text='<span>Help make</span> a Real Change in <strong>Wigan &amp; Leigh</strong>'
