--- a/templates/src/pages/page-howtoapply.hbs
+++ b/templates/src/pages/page-howtoapply.hbs
@@ -5,7 +5,7 @@ header_nav_howtoapply: true
 ---
 {{> header
   header__classes="decor decor-bottom decor-rc-candy"
-  header__style="background-image: url(assets/uploads/header-worldcap.jpg);"
+  header__style=false
   header__nav=true
   header__hero=true
   header__hero__text='Real Change in Wigan &amp; Leigh <strong> How to Apply</strong>'
