Home colour updates

--- a/templates/src/_components/edge/_edge.scss
+++ b/templates/src/_components/edge/_edge.scss
@@ -33,12 +33,16 @@
   background-image: url(assets/edge-rc-aubergine-top.png);
 }
 
+.edge-rc-blue-top::before {
+  background-image: url(assets/edge-rc-blue-top.png);
+}
+
 .edge-rc-candy-top::before {
   background-image: url(assets/edge-rc-candy-top.png);
 }
 
-.edge-rc-blue-top::before {
-  background-image: url(assets/edge-rc-blue-top.png);
+.edge-rc-dive-top::before {
+  background-image: url(assets/edge-rc-dive-top.png);
 }
 
 .edges {
