--- a/templates/src/pages/page-home.hbs
+++ b/templates/src/pages/page-home.hbs
@@ -13,26 +13,26 @@ header_nav_home: true
 
 <section class="section home-intro">
   <div class="container">
-    <div class="boxed edges bg-rc-candy home-intro-whatis">
+    <div class="boxed edges bg-rc-sunny home-intro-whatis">
       <div class="boxed-inner">
         <h2>What is Real Change?</h2>
         <p><strong>Real Change pays for practical items individuals need to build independent lives away from the streets.</strong></p>
         <p>If everyone who lives, works or visits Wigan &amp; Leigh donates, together we can make a Real Change!</p>
-        <a class="button button-primary d-block" href="#">Donate and make a real change</a>
+        <a class="button d-block" href="#">Donate and make a real change</a>
       </div>
       <div class="boxed-media aspect aspect-6by5">
         <img alt="" class="aspect-item" src="assets/uploads/home-intro-whatis.png">
       </div>
     </div>
     <div class="home-intro-split">
-      <div class="boxed edges bg-rc-aubergine home-intro-who">
+      <div class="boxed edges bg-rc-dive home-intro-who">
         <div class="boxed-inner">
           <h2>Who does Real Change help?</h2>
           <p><strong>The Real Change fund supports individuals who are homeless by paying for items they need -</strong> a deposit for a home, a training course, clothes for a job interview, furnishing for a new flat, or travel costs.</p>
           <p><a href="#">Find out more about how Real Change works and how the money is spent.</a></p>
         </div>
       </div>
-      <div class="boxed edges bg-rc-blue home-intro-apply">
+      <div class="boxed edges bg-rc-spark home-intro-apply">
         <div class="boxed-inner">
           <h2>How can you apply?</h2>
           <p>If your organisation provides a service to support people who are homeless in Wigan &amp; Leigh and you would like to discuss how to become an approved Real Change partner please contact the Real Change Secretary on <a href="#">0000 000 000</a> or email <a href="#">xxxxxx@realchange.co.uk </a> or <a href="#">find out more here</a>. </p>
@@ -69,7 +69,7 @@ header_nav_home: true
   </div>
 </section>
 
-<section class="section bg-rc-blue home-partners pre-footer-withcityscape edge edge-top edge-rc-blue-top">
+<section class="section bg-rc-dive home-partners pre-footer-withcityscape edge edge-top edge-rc-dive-top">
   <div class="container">
     <div class="home-partners-header">
       <h2 class="h1 home-partners-title">{{> icon-like icon-like__height="44" icon-like__width="44" }} Help from our Partners</h2>
