Adds Decor Dive

--- a/hugo/layouts/partials/header.html
+++ b/hugo/layouts/partials/header.html
@@ -1,4 +1,4 @@
-<header class="header decor decor-bottom decor-rc-candy{{ if .classes }} {{ .classes }}{{ end }}" role="banner"{{ if .background }} style="background-image: url({{ .background }});" {{ end }}>
+<header class="header decor decor-bottom decor-rc-dive{{ if .classes }} {{ .classes }}{{ end }}" role="banner"{{ if .background }} style="background-image: url({{ .background }});" {{ end }}>
   <a class="header-skip" href="#main">Skip to main content</a>
   <div class="header-inner">
     <div class="header-brand">
