--- a/templates/src/_components/decor/_decor.scss
+++ b/templates/src/_components/decor/_decor.scss
@@ -21,8 +21,8 @@
   right: 0;
 }
 
-.decor-rc-candy {
+.decor-rc-dive {
   &.decor-bottom::after {
-    background-image: url(assets/decor-rc-candy.png);
+    background-image: url(assets/decor-rc-dive.png);
   }
 }
