--- a/templates/src/pages/page-home.hbs
+++ b/templates/src/pages/page-home.hbs
@@ -4,7 +4,7 @@ layout: default
 header_nav_home: true
 ---
 {{> header
-  header__classes="home-header decor decor-bottom decor-rc-candy"
+  header__classes="home-header decor decor-bottom decor-rc-dive"
   header__style=false
   header__nav=true
   header__hero=true
