--- a/templates/src/pages/page-privacy.hbs
+++ b/templates/src/pages/page-privacy.hbs
@@ -3,7 +3,7 @@ title: "Privacy Policy"
 layout: default
 ---
 {{> header
-  header__classes="decor decor-bottom decor-rc-candy"
+  header__classes="decor decor-bottom decor-rc-dive"
   header__nav=true
   header__hero=true
   header__hero__text='Privacy Policy'
@@ -20,7 +20,6 @@ layout: default
       <h2>Heading level 2</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique reprehenderit incidunt ducimus velit id, obcaecati quisquam voluptatum iure. Accusamus, eum.</p>
       <p>Ad tempore omnis, totam sit, nostrum enim excepturi. Recusandae dignissimos at id eaque dolore voluptates, laborum aperiam cupiditate illum similique cum exercitationem!</p>
-
     </div>
   </div>
 </div>
